# process-injection

./: Cargo.toml
.claude/: CLAUDE.md
attack_01_dll_injection/: Cargo.toml
attack_01_dll_injection/src/: main.rs
attack_02_pe_injection/: Cargo.toml
attack_02_pe_injection/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs  module.rs  process.rs  raii.rs  utils.rs
payload/: Cargo.toml
payload/src/: lib.rs
victim/: Cargo.toml
victim/src/: main.rs
