[package]
name = "attack_01_dll_injection"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }

[dependencies.windows-sys]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug"
]